# RustTodoApp

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: main.rs
xtask/src/: main.rs
