[package]
name = "todo_app"
version = "0.1.1"
edition = "2021"

[dependencies]
eframe = { version = "0.32.3", features = ["persistence"] }
egui = "0.32.3"
egui_material_icons = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

# Metadata for cargo-deb so the workflow can produce a .deb
[package.metadata.deb]
name = "todo-app"
maintainer = "thearpankumar <you@example.com>"
depends = "libc6 (>= 2.17)"
section = "utils"
priority = "optional"
description = "A small todo app built with eframe / egui."
