[package]
name = "todo_app"
version = "2.5.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.3", features = ["persistence"] }
egui = "0.33.3"
egui_material_icons = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
whoami = "2.0.2"
chrono = "0.4"
egui_commonmark = "0.22"
serde_json = "1.0"

# Metadata for cargo-deb so the workflow can produce a .deb
[package.metadata.deb]
name = "todo-app"
maintainer = "thearpankumar arpankumar1119@outlook.com"
depends = "libc6 (>= 2.17)"
section = "utils"
priority = "optional"
description = "A small todo app built with eframe / egui."
