[package]
name = "todo_app"
version = "2.5.1"
edition = "2021"
license = "MIT"
authors = ["thearpankumar <arpankumar1119@outlook.com>"]
description = "A small todo app built with eframe / egui."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/todo_app", dest = "/usr/bin/todo_app", mode = "755" },
    { source = "assets/icon.png", dest = "/usr/share/pixmaps/todo_app.png", mode = "644" },
    { source = "todo_app.desktop", dest = "/usr/share/applications/todo_app.desktop", mode = "644" }
]

[dependencies]
eframe = { version = "0.33.3", features = ["persistence"] }
egui = "0.33.3"
egui_material_icons = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
whoami = "2.0.2"
chrono = "0.4"
egui_commonmark = "0.22"
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

# Metadata for cargo-deb so the workflow can produce a .deb
[package.metadata.deb]
name = "todo-app"
maintainer = "thearpankumar arpankumar1119@outlook.com"
depends = "libc6 (>= 2.17)"
section = "utils"
priority = "optional"
assets = [
    ["target/release/todo_app", "/usr/bin/todo-app", "755"],
    ["assets/icon.png", "/usr/share/pixmaps/todo_app.png", "644"],
    ["todo_app.desktop", "/usr/share/applications/todo_app.desktop", "644"]
]

[workspace]
members = ["xtask"]
